src/app/[locale]/globals.css
@import 'tailwindcss';

@plugin '../../../hero.ts';

@source '../../../node_modules/@heroui/theme/dist/**/*.{js,ts,jsx,tsx}';

@custom-variant dark (&:is(.dark *));

:root {
  --background: #fff;
  --foreground: #171717;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  font-family: Geist, Arial, Helvetica, sans-serif;
  color: var(--foreground);
  background: var(--background);
}

